MQTT reconnection procedure

--- a/server/config/rpi-electrical-panel-config.yml
+++ b/server/config/rpi-electrical-panel-config.yml
@@ -18,3 +18,5 @@ MQTT_COMMAND_RELAYS_TOPIC: command/relays
 MQTT_RELAYS_STATUS_TOPIC: status/relays
 MQTT_QOS: 1
 MQTT_MAX_CONNECTION_RETRIES: 12
+MQTT_RECONNECTION_TIMEOUT_IN_SEG: 1
+MQTT_MSG_PUBLISH_TIMEOUT_IN_SECS: 5
