--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ flask-smorest = "^0.34.1"
 PyYAML = "^5.4.1"
 paho-mqtt = "^1.6.1"
 bson = "^0.5.10"
-#smbus = "^1.1.post2"
+smbus = "^1.1.post2"
 timeloop = "^1.0.2"
 
 [tool.poetry.dev-dependencies]
