app as a service + logs config update + readme update

--- a/server/config/logging-config.yml
+++ b/server/config/logging-config.yml
@@ -24,32 +24,34 @@ handlers:
     maxBytes: 52428800 # 50 Megabytes
     backupCount: 9
 
+  app:
+    class: logging.handlers.RotatingFileHandler
+    formatter: default
+    filename: logs/app.log
+    maxBytes: 52428800 # 50 Megabytes
+    backupCount: 9
+
 root:
   level: WARN
-  handlers: [console]
+  handlers: [app]
 
 loggers:
   server.app:
-    level: DEBUG
-    handlers: [console]
+    level: INFO
+    handlers: [app]
     propagate: no
 
-  server.interfaces:
-      level: DEBUG
-      handlers: [console]
-      propagate: no
-
   server.interfaces.mqtt:
-      level: DEBUG
+      level: INFO
       handlers: [mqtt]
       propagate: no
 
   server.relays_manager:
-      level: DEBUG
-      handlers: [console]
+      level: INFO
+      handlers: [app]
       propagate: no
 
   server.rest_api:
-      level: DEBUG
+      level: INFO
       handlers: [api_rest]
       propagate: no
