--- a/service/rpi-electrical-panel.service
+++ b/service/rpi-electrical-panel.service
@@ -7,7 +7,7 @@ User=pi
 WorkingDirectory=/home/pi/rpi-electrical-panel
 Environment=FLASK_CONFIG=production
 Environment=FLASK_APP="server/app:create_app()"
-ExecStart=/home/pi/rpi-electrical-panel/.venv/bin/flask run
+ExecStart=/home/pi/rpi-electrical-panel/.venv/bin/flask run --host '0.0.0.0'
 Restart=always
 
 [Install]
